src/test/deca/context/valid/class/12_declMemeMethod.deca
/* Description:
     tester class qui possede de method sans Param

    Historique:
      cree le 08/01/2020
*/

   class A {

    int get(){

    }


   }
   class B extends A {

    int get(){
    
    }

   }
